--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@singleware/mongodb",
   "description": "Singleware MongoDB driver package.",
   "license": "MIT",
-  "version": "1.2.17",
+  "version": "1.3.0",
   "main": "release/source/index.js",
   "types": "release/types/index.d.ts",
   "keywords": [
@@ -26,14 +26,14 @@
   },
   "dependencies": {
     "@singleware/class": "^1.1.19",
-    "@singleware/mapping": "^1.2.42"
+    "@singleware/mapping": "^1.3.2"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.1.26",
-    "@types/node": "^10.14.6",
-    "mongodb": "^3.2.3",
-    "prettier": "^1.17.0",
-    "typescript": "^2.9.2"
+    "@types/mongodb": "^3.1.29",
+    "@types/node": "^10.14.13",
+    "mongodb": "^3.2.7",
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
   },
   "prettier": {
     "printWidth": 240,
@@ -42,7 +42,8 @@
     "semi": true
   },
   "scripts": {
-    "build": "npm run make-source && npm run make-examples",
+    "build": "npm run clean && npm run make-source && npm run make-examples",
+    "clean": "rm -rf ./release",
     "make-source": "npx tsc -p ./source",
     "make-examples": "npx tsc -p ./examples"
   }
