--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
   "name": "@singleware/mongodb",
   "description": "Singleware MongoDB driver package.",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "main": "release/source/index.js",
   "types": "release/types/index.d.ts",
   "keywords": [
-    "mongodb driver",
-    "mongodb ODM",
-    "data mapper",
-    "data modeling",
-    "object data model"
+    "Mongodb ODM driver"
   ],
   "repository": {
     "type": "git",
@@ -26,14 +22,14 @@
   },
   "dependencies": {
     "@singleware/class": "^1.1.19",
-    "@singleware/mapping": "^1.3.50"
+    "@singleware/mapping": "^1.3.51"
   },
   "devDependencies": {
     "@types/mongodb": "^3.3.16",
-    "@types/node": "^10.17.15",
-    "mongodb": "^3.5.3",
+    "@types/node": "^10.17.16",
+    "mongodb": "^3.5.4",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.2"
   },
   "prettier": {
     "printWidth": 125,
