--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@singleware/mongodb",
   "description": "Singleware MongoDB driver package.",
   "license": "MIT",
-  "version": "1.0.5",
+  "version": "1.0.22",
   "main": "release/source/index.js",
   "types": "release/types/index.d.ts",
   "keywords": [
@@ -22,14 +22,14 @@
   },
   "dependencies": {
     "@singleware/class": "^1.1.19",
-    "@singleware/mapping": "^1.3.51"
+    "@singleware/mapping": "^1.3.68",
+    "@types/mongodb": "^3.5.2"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.3.16",
-    "@types/node": "^10.17.16",
-    "mongodb": "^3.5.4",
+    "@types/node": "^10.17.17",
+    "mongodb": "^3.5.5",
     "prettier": "^1.19.1",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.3"
   },
   "prettier": {
     "printWidth": 125,
