--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2019",
-    "module": "commonjs",
+    "module": "CommonJS",
+    "newLine": "lf",
     "strict": true,
     "sourceMap": true,
     "incremental": true,
     "declaration": true,
+    "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
-    "suppressExcessPropertyErrors": true,
     "outDir": "../release/source",
     "declarationDir": "../release/types"
   },
