--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@singleware/mongodb",
   "description": "Singleware MongoDB driver package.",
   "license": "MIT",
-  "version": "1.0.26",
+  "version": "1.0.28",
   "main": "release/source/index.js",
   "types": "release/types/index.d.ts",
   "keywords": [
@@ -22,23 +22,26 @@
   },
   "dependencies": {
     "@singleware/class": "^1.1.19",
-    "@singleware/mapping": "^1.3.71",
-    "@types/mongodb": "^3.5.23"
+    "@singleware/mapping": "^1.3.75",
+    "@types/mongodb": "^3.5.25"
   },
   "devDependencies": {
-    "@types/node": "^10.17.26",
+    "@types/node": "^10.17.28",
     "mongodb": "^3.5.9",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.7"
   },
   "prettier": {
-    "printWidth": 125,
+    "endOfLine": "lf",
+    "trailingComma": "none",
+    "printWidth": 145,
     "tabWidth": 2,
     "singleQuote": true,
     "semi": true
   },
   "scripts": {
-    "build": "npm run clean && npm run make-source && npm run make-examples",
+    "build": "npm run clean && npm run make",
+    "make": "npm run make-source && npm run make-examples",
     "clean": "rm -rf ./release",
     "make-source": "npx tsc -p ./source",
     "make-examples": "npx tsc -p ./examples"
